refactor: SqlParserUtils#getParams